--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "framer-motion": "^7.2.1",
+    "i18next": "^21.9.1",
+    "install": "^0.13.0",
     "normalize.css": "^8.0.1",
+    "npm": "^8.18.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.5",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
